SERVER-41064 ScopedDebugInfo